--- a/design/_courses.html
+++ b/design/_courses.html
@@ -92,7 +92,7 @@
                              src="assets/images/logo/accent-teal-100@2x.png"
                              width="32"
                              alt="Khumla">
-                        <span class="d-none d-lg-block">Khumla</span>
+                        <span class="d-none d-lg-block">Thooto</span>
                     </a>
 
                     <!-- <button class="btn navbar-btn mr-16pt" data-toggle="modal" data-target="#apps">Apps <i class="material-icons">arrow_drop_down</i></button> -->
@@ -335,7 +335,7 @@
 
                                 <small class="ml-4pt flex">
                                     <span class="d-flex flex-column">
-                                        <strong class="text-black-100">KhumlaKhumla Inc.</strong>
+                                        <strong class="text-black-100">Thooto Inc.</strong>
                                         <span class="text-black-50">Publisher</span>
                                     </span>
                                 </small>
@@ -418,7 +418,7 @@
 
                                         <small class="ml-4pt flex">
                                             <span class="d-flex flex-column">
-                                                <strong class="text-black-100">KhumlaKhumla Inc.</strong>
+                                                <strong class="text-black-100">Thooto.</strong>
                                                 <span class="text-black-50">Publisher</span>
                                             </span>
                                         </small>
@@ -1302,9 +1302,9 @@
                             <img class="brand-icon"
                                  src="assets/images/logo/black-70@2x.png"
                                  width="30"
-                                 alt="Khumla"> Khumla
+                                 alt="Khumla"> Thooto
                         </p>
-                        <p class="measure-lead-max text-muted mb-0 small">Khumla is a beautifully crafted user interface for modern Business Admin Web Applications, with examples for many pages needed for Customer Relationship Management, Enterprise Resource Planning, Khumlan Resources, Content Management System, Project Management, Tasks, eCommerce, Messaging and Account Management.</p>
+                        <p class="measure-lead-max text-muted mb-0 small">Thooto is a beautifully crafted user interface for modern Business Admin Web Applications, with examples for many pages needed for Customer Relationship Management, Enterprise Resource Planning, Thooto Resources, Content Management System, Project Management, Tasks, eCommerce, Messaging and Account Management.</p>
                     </div>
                     <div class="pb-16pt pb-lg-24pt">
                         <div class="container-fluid page__container">
@@ -1375,7 +1375,7 @@
                             <img class="sidebar-brand-icon"
                                  src="assets/images/logo/accent-teal-100@2x.png"
                                  alt="Khumla">
-                            <span>Khumla</span>
+                            <span>Thooto</span>
                         </a>
 
                         <div class="sidebar-account mx-16pt mb-16pt dropdown">
@@ -1433,7 +1433,7 @@
 
                                     <small class="ml-4pt flex">
                                         <span class="d-flex flex-column">
-                                            <strong class="text-black-100">Khumla Inc.</strong>
+                                            <strong class="text-black-100">Thooto Inc.</strong>
                                             <span class="text-black-50">Publisher</span>
                                         </span>
                                     </small>
