--- a/design/_edit-course.html
+++ b/design/_edit-course.html
@@ -561,7 +561,7 @@
                        <img class="sidebar-brand-icon"
                             src="assets/images/logo/accent-teal-100@2x.png"
                             alt="Khumla">
-                       <span>Khumla</span>
+                       <span>Thooto</span>
                    </a>
 
                    <div class="sidebar-account mx-16pt mb-16pt dropdown">
@@ -619,7 +619,7 @@
 
                                <small class="ml-4pt flex">
                                    <span class="d-flex flex-column">
-                                       <strong class="text-black-100">Khumla Inc.</strong>
+                                       <strong class="text-black-100">Thooto Inc.</strong>
                                        <span class="text-black-50">Publisher</span>
                                    </span>
                                </small>
