--- a/design/_instructor-dash.html
+++ b/design/_instructor-dash.html
@@ -97,7 +97,7 @@
                              src="assets/images/logo/accent-teal-100@2x.png"
                              width="32"
                              alt="Khumla">
-                        <span class="d-none d-lg-block">Khumla</span>
+                        <span class="d-none d-lg-block">Thooto</span>
                     </a>
 
                     <!-- <button class="btn navbar-btn mr-16pt" data-toggle="modal" data-target="#apps">Apps <i class="material-icons">arrow_drop_down</i></button> -->
